--- a/views/cuccok.ejs
+++ b/views/cuccok.ejs
@@ -81,7 +81,7 @@
 </table>
 <a href="/newCucc" style="position: absolute; right: 5%; bottom: 5%" >
   <div class="btn primary_color">
-    <img src="images/icons/add.svg", style="width: 5rem; height: 5rem; color: white">
+    <img src="images/icons/add.svg" style="width: 5rem; height: 5rem; color: white">
   </div>
 </a>
 
