--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,7 +19,7 @@
             </th>
             <th class="borderdebug" style="width: 19%">
                 <a href="/">
-                    <h1 class="wtext pages <% if(tab!== undefined && tab == 'cuccok') { %>
+                    <h1 class="wtext pages <% if(tab!== undefined && tab === 'cuccok') { %>
                                 primary_color
                             <% } %> ">
                         Cuccok
@@ -28,7 +28,7 @@
             </th>
             <th class="borderdebug" style="width: 17%">
                 <a href="/szobak">
-                    <h1 class="wtext pages <% if(tab!== undefined && tab == 'szobak') { %>
+                    <h1 class="wtext pages <% if(tab!== undefined && tab === 'szobak') { %>
                     primary_color
                             <% } %> ">
                         Szobák
