--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 </body>
 
 
-<form action="/login" style="margin-top: 10%">
+<form method="post" style="margin-top: 10%">
     <table class="wfill center-align" style="margin-top: 5%">
         <tr>
             <th colspan="2" class="borderdebug font f50 black center-align hfill" style="margin: 30px; vertical-align: center">
