--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,12 +13,11 @@
         <tr class="borderdebug">
             <th colspan="2" class="borderdebug">
 
-                <input type="text" , placeholder="Felhasználónév" ,
+                <input type="text"  placeholder="Felhasználónév" id="name" name="name"
                        style="text-align: center; width: 30%; font-size: 30px;margin: 30px"
                        class="font"><br>
 
-                <input type="text" placeholder="Jelszó" class="tag font" style="margin-top: 30px; margin-bottom: 50px"
-                       ,>
+                <input type="text" id="password" name="password" placeholder="Jelszó" class="tag font" style="margin-top: 30px; margin-bottom: 50px">
             </th>
         </tr>
         <tr>
