--- a/views/szobak.ejs
+++ b/views/szobak.ejs
@@ -59,7 +59,7 @@
     </tr>
   <% }); %>
 
-  <tr class="borderdebug">
+  <tr class="borderdebug" style="background-color: white">
     <th class="borderdebug szobacol">
     </th>
     <th class="borderdebug cucccol">
@@ -74,7 +74,7 @@
 </table>
 <a href="/szobak/new" style="position: absolute; right: 5%; bottom: 5%" >
   <div class="btn primary_color">
-    <img src="images/icons/add.svg"class="white" style="width: 5rem; height: 5rem">
+    <img src="/images/icons/add.svg"class="white" style="width: 5rem; height: 5rem">
   </div>
 </a>
 </body>
