--- a/views/cuccok.ejs
+++ b/views/cuccok.ejs
@@ -66,7 +66,7 @@
   <tr class="borderdebug" style="background-color: white">
     <th class="borderdebug namecol">
     </th>
-    <th class="borderdebug avcol center-align " style="vertical-align: center">
+    <th class="borderdebug avcol center-align ">
 
     </th>
     <th class="borderdebug placecol">
@@ -81,7 +81,7 @@
 </table>
 <a href="/newCucc" style="position: absolute; right: 5%; bottom: 5%" >
   <div class="btn primary_color">
-    <img src="images/icons/add.svg" style="width: 5rem; height: 5rem; color: white">
+    <img src="/images/icons/add.svg" style="width: 5rem; height: 5rem; color: white">
   </div>
 </a>
 
